--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -33,42 +33,39 @@
 
 <div class="page-content-wrap">
 
-    <div class="row">
+    <form role="form" id="frmCustomer">
 
-        <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
+        <div class="row">
 
-            <div class="block" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; ">
+            <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
 
-                <h4 style="margin-top: 0px;">Search customer.</h4>
+                <div class="block" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; ">
 
-                <form role="form" id="frmCustomerSearch">
-
+                    <h4 style="margin-top: 0px;">Search customer.</h4>
+                    
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number." name="Customer.Mobile" value="@Model.Customer.Mobile" />
+                        <input class="form-control" placeholder="Enter mobile number." name="Customer.Mobile" value="@Model.Customer.Mobile" maxlength="12" />
                     </div>
 
-                </form>
-            </div>
-            <div class="block">
+                </div>
+                <div class="block">
 
-                <h4 style="margin-top: 15px;">Primary information.</h4>
+                    <h4 style="margin-top: 15px;">Primary information.</h4>
 
-                <div class="form-group" style="margin-bottom: 5px; float: right;">
-                    <label class="switch">                       
-                        @if (Model.Customer.IsActive == 0)
-                        {
-                            <input value="@Model.Customer.IsActive" name="Customer.IsActive" type="checkbox" id="Flag">
-                        }
-                        else
-                        {
-                            <input value="@Model.Customer.IsActive" name="Customer.IsActive" checked="checked" type="checkbox" id="Flag">
-                        }
-                        @*<input checked="" id="Flag" value="0" type="checkbox">*@
-                        <span></span>
-                    </label>
-                </div>  
-
-                <form role="form" id="frmCustomerPrimaryInfo">
+                    <div class="form-group" style="margin-bottom: 5px; float: right;">
+                        <label class="switch">
+                            @if (Model.Customer.IsActive == 0)
+                            {
+                                <input value="@Model.Customer.IsActive" name="Customer.IsActive" type="checkbox" id="Flag">
+                            }
+                            else
+                            {
+                                <input value="@Model.Customer.IsActive" name="Customer.IsActive" checked="checked" type="checkbox" id="Flag">
+                            }
+                            @*<input checked="" id="Flag" value="0" type="checkbox">*@
+                            <span></span>
+                        </label>
+                    </div>
 
                     <div class="form-group">
 
@@ -86,7 +83,7 @@
 
                     <div class="form-group">
                         <select class="form-control select" placeholder="Select gender." name="Customer.Customer_Gender" value="@Model.Customer.Customer_Gender">
-                           @foreach (var item in LookupInfo.Get_Gender_Types())
+                            @foreach (var item in LookupInfo.Get_Gender_Types())
                             {
                                 if (Model.Customer.Customer_Gender == item.Key)
                                 {
@@ -113,20 +110,16 @@
                                 <input type="text" class="form-control datepicker" disabled="disabled" name="Customer.Customer_DOB" value="@DateTime.Now.ToShortDateString()" />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             }
-                            
+
                         </div>
-                    </div>
-                </form>
+                    </div>                    
+                </div>
             </div>
-        
-        </div>
 
-        <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
+            <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
 
-            <div class="block">
-                <h4 style="margin-top: 0px;">Billing address.</h4>
-
-                <form role="form" id="frmCustomerBillingAddressInfo">
+                <div class="block">
+                    <h4 style="margin-top: 0px;">Billing address.</h4>
 
                     <div class="form-group">
                         <textarea class="form-control" rows="5" placeholder="Billing address." name="Customer.Customer_Billing_Address">@Model.Customer.Customer_Billing_Address</textarea>
@@ -138,9 +131,6 @@
 
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Billing_State" value="@Model.Customer.Customer_Billing_State" />
-                        @*<select class="form-control select" placeholder="Select state." name="Customer.Customer_Billing_State">
-                            <option>Maharashtra</option>
-                        </select>*@
                     </div>
 
                     <div class="form-group">
@@ -148,20 +138,17 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter pincode." name="Customer.Customer_Billing_Pincode" value="@(Model.Customer.Customer_Billing_Pincode == 0 ? "" : Model.Customer.Customer_Billing_Pincode.ToString())" />
+                        <input type="text" class="form-control" placeholder="Enter pincode." name="Customer.Customer_Billing_Pincode" value="@(Model.Customer.Customer_Billing_Pincode == 0 ? "" : Model.Customer.Customer_Billing_Pincode.ToString())" maxlength="6" />
                     </div>
 
-                </form>
+                </div>
+
             </div>
-        
-        </div>
 
-        <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
+            <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
 
-            <div class="block">
-                <h4 style="margin-top: 0px;">Shipping address.</h4>
-
-                <form role="form" id="frmCustomerShippingAddressInfo">
+                <div class="block">
+                    <h4 style="margin-top: 0px;">Shipping address.</h4>
 
                     <div class="form-group">
                         <textarea class="form-control" rows="5" placeholder="Shipping address." name="Customer.Customer_Shipping_Address"> @Model.Customer.Customer_Shipping_Address</textarea>
@@ -173,9 +160,6 @@
 
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Enter state." name="Customer.Customer_Shipping_State" value="@Model.Customer.Customer_Shipping_State" />
-                        @*<select class="form-control select" placeholder="Select state." name="Customer.Customer_Shipping_State">
-                            <option>Maharashtra</option>
-                        </select>*@
                     </div>
 
                     <div class="form-group">
@@ -183,34 +167,32 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter pincode." name="Customer.Customer_Shipping_Pincode" value="@(Model.Customer.Customer_Shipping_Pincode == 0 ? "" : Model.Customer.Customer_Shipping_Pincode.ToString())" />
+                        <input type="text" class="form-control" placeholder="Enter pincode." name="Customer.Customer_Shipping_Pincode" value="@(Model.Customer.Customer_Shipping_Pincode == 0 ? "" : Model.Customer.Customer_Shipping_Pincode.ToString())" maxlength="6" />
                     </div>
 
-                </form>
+                </div>
+
             </div>
-        
-        </div>
 
-        <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
+            <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
 
-            <div class="block">
-                <h4 style="margin-top: 0px;">Communication detail.</h4>
+                <div class="block">
+                    <h4 style="margin-top: 0px;">Communication detail.</h4>
 
-                <form role="form" id="frmCustomerCommunicationInfo">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number 1." name="Customer.Customer_Mobile1" value="@Model.Customer.Customer_Mobile1" />
-                    </div>
-                    
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number 2." name="Customer.Customer_Mobile2" value="@Model.Customer.Customer_Mobile2" />
+                        <input type="text" class="form-control" placeholder="Enter mobile number 1." name="Customer.Customer_Mobile1" value="@Model.Customer.Customer_Mobile1" maxlength="12" />
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter landline number 1." name="Customer.Customer_Landline1" value="@Model.Customer.Customer_Landline1" />
+                        <input type="text" class="form-control" placeholder="Enter mobile number 2." name="Customer.Customer_Mobile2" value="@Model.Customer.Customer_Mobile2" maxlength="12" />
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter landline number 2." name="Customer.Customer_Landline2" value="@Model.Customer.Customer_Landline2" />
+                        <input type="text" class="form-control" placeholder="Enter landline number 1." name="Customer.Customer_Landline1" value="@Model.Customer.Customer_Landline1" maxlength="12" />
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter landline number 2." name="Customer.Customer_Landline2" value="@Model.Customer.Customer_Landline2" maxlength="12" />
                     </div>
 
                     <div class="form-group">
@@ -220,18 +202,15 @@
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Enter email address 2." name="Customer.Customer_Email2" value="@Model.Customer.Customer_Email2" />
                     </div>
-                </form>
+                </div>
+
             </div>
-        
-        </div>
 
-        <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
+            <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
 
-            <div class="block">
+                <div class="block">
 
-                <h4 style="margin-top: 0px;">Secondary information.</h4>
-
-                <form role="form" id="frmCustomerSecondaryInfo">
+                    <h4 style="margin-top: 0px;">Secondary information.</h4>
 
                     <div class="form-group">
 
@@ -241,7 +220,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Spouse date of birth.</span>
-                        <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">                           
+                        <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
                             @if (Model.Customer.Customer_Spouse_DOB != DateTime.MinValue)
                             {
                                 <input type="text" class="form-control datepicker" disabled="disabled" name="Customer.Customer_Spouse_DOB" value="@Model.Customer.Customer_Spouse_DOB.ToShortDateString()" />
@@ -272,9 +251,7 @@
                     </div>
 
                     <div class="form-group">
-
                         <input type="text" class="form-control" placeholder="Enter child 1. name." name="Customer.Customer_Child1_Name" value="@Model.Customer.Customer_Child1_Name" />
-
                     </div>
 
                     <div class="form-group">
@@ -290,13 +267,11 @@
                                 <input type="text" class="form-control datepicker" disabled="disabled" name="Customer.Customer_Child1_DOB" value="@DateTime.Now.ToShortDateString()" />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             }
-                        </div>                       
+                        </div>
                     </div>
 
                     <div class="form-group">
-
                         <input type="text" class="form-control" placeholder="Enter child 2. name." name="Customer.Customer_Child2_Name" value="@Model.Customer.Customer_Child2_Name" />
-
                     </div>
 
                     <div class="form-group">
@@ -315,20 +290,21 @@
                         </div>
                     </div>
 
-                </form>
+                </div>
+
             </div>
-        
-        </div>
-        
-        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
-            
+
+            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
+
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveCustomer">Save</button>
                     <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Index", "Customer")'">Cancel</button>
-                </div>            
-        </div>
+                </div>
+            </div>
 
-    </div>
+        </div>
+    </form>
+    
 
 </div>
 
