--- a/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
@@ -91,70 +91,91 @@
 
         <div class="col-md-8" style="padding: 10px;" id="divSize">
             <div class="block">
-             <h4 style="margin-top: 0px;">Size details:</h4>
+                <h4 style="margin-top: 0px;">Size details:</h4>
 
-            <form id="frmSize" role="form">
-                <div class="row">
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size1" id="txtSize1" />
-                    <input type="hidden" id="hdnSize1"/>
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size2" id="txtSize2" />
-                    <input type="hidden" id="hdnSize2" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size3" id="txtSize3" />
-                    <input type="hidden" id="hdnSize3" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size4" id="txtSize4" />
-                    <input type="hidden" id="hdnSize4" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size5" id="txtSize5" />
-                    <input type="hidden" id="hdnSize5" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size6" id="txtSize6" />
-                    <input type="hidden" id="hdnSize6" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size7" id="txtSize7" />
-                    <input type="hidden" id="hdnSize7" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size8" id="txtSize8" />
-                    <input type="hidden" id="hdnSize8" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size9" id="txtSize9" />
-                    <input type="hidden" id="hdnSize9" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size10" id="txtSize10" />
-                    <input type="hidden" id="hdnSize10" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size11" id="txtSize11" />
-                    <input type="hidden" id="hdnSize11" />
-                </div>
-                <div class="col-md-1" style="padding-left: 0px;">
-                    <input type="text" class="form-control" name="SizeGroup.Size12" id="txtSize12" />
-                    <input type="hidden" id="hdnSize12" />
-                </div>
-</div>
-                 <div class="row">
-                     <div class="col-md-12" style="padding-left: 0px;padding-top:15px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
-                        <div class="btn-group">
-                            <button type ="button" id="btnSaveSize" class="btn btn-success active">Save</button>
-                            <button type="button" class="btn btn-danger active">Cancel</button>
+                <form id="frmSize" role="form">
+
+                    <div class="row">
+
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size1" id="txtSize1" />
+                            <input type="hidden" id="hdnSize1" />
                         </div>
-                     </div>
-                    </div>
-            </form>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size2" id="txtSize2" />
+                            <input type="hidden" id="hdnSize2" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size3" id="txtSize3" />
+                            <input type="hidden" id="hdnSize3" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size4" id="txtSize4" />
+                            <input type="hidden" id="hdnSize4" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size5" id="txtSize5" />
+                            <input type="hidden" id="hdnSize5" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size6" id="txtSize6" />
+                            <input type="hidden" id="hdnSize6" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size7" id="txtSize7" />
+                            <input type="hidden" id="hdnSize7" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size8" id="txtSize8" />
+                            <input type="hidden" id="hdnSize8" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size9" id="txtSize9" />
+                            <input type="hidden" id="hdnSize9" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size10" id="txtSize10" />
+                            <input type="hidden" id="hdnSize10" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size11" id="txtSize11" />
+                            <input type="hidden" id="hdnSize11" />
+                        </div>
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size12" id="txtSize12" />
+                            <input type="hidden" id="hdnSize12" />
+                        </div>
 
-                </div>
+                    </div>
+
+                    <div class="col-md-12" style="padding-left: 0px;padding-top:15px; margin-bottom: 15px;">
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size12" id="txtSize13" />
+                            <input type="hidden" id="hdnSize13" />
+                        </div>
+
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size12" id="txtSize14" />
+                            <input type="hidden" id="hdnSize14" />
+                        </div>
+
+                        <div class="col-md-1" style="padding-left: 0px;">
+                            <input type="text" class="form-control" name="SizeGroup.Size12" id="txtSize15" />
+                            <input type="hidden" id="hdnSize15" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12" style="padding-left: 0px;padding-top:15px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
+                            <div class="btn-group">
+                                <button type="button" id="btnSaveSize" class="btn btn-success active">Save</button>
+                                <button type="button" class="btn btn-danger active">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
         </div>
 
     </div>
