--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -53,17 +53,14 @@
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnSaveBrand">Save</button>
-                            <button class="btn btn-danger active">Cancel</button>
+                            <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Index", "Brand")'">Cancel</button>
+                            @*<button class="btn btn-danger active">Cancel</button>*@
                         </div>
                     </div>
 
                 </form>
 
                 <h4 style="margin-top: 0px;">Brand listing.</h4>
-
-                @*<div class="form-group">
-                    <input type="text" class="form-control brand-filter" name="Filter.Brand_Name" placeholder="Enter brand to search" />
-                </div>*@
 
                 <div class="form-group auto-complete">
                     <div class="input-group">
@@ -77,15 +74,7 @@
                 <div class="list-group border-bottom push-down-20" id="Brand_Grid">
 
                 </div>
-                
-                @*<div class="list-group border-bottom push-down-20" style="margin-bottom:0px !important;">
-                    <a href="#" class="list-group-item active">Arrow</a>
-                    <a href="#" class="list-group-item">Louie Phillipe</a>
-                    <a href="#" class="list-group-item">Calvin Klein</a>
-                    <a href="#" class="list-group-item">Pepe</a>
-                    <a href="#" class="list-group-item">Wrangler</a>
-                </div>*@
-
+               
             </div>
 
             <div class="row">
@@ -95,23 +84,7 @@
             </div>
 
         </div>
-
-         @*<div class="col-md-12" style="padding: 0px;text-align:center;">
-
-            <ul class="pagination pagination-sm">
-                <li class="disabled"><a href="#">First</a></li>
-                <li class="disabled"><a href="#">«</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">»</a></li>
-                <li><a href="#">Last</a></li>
-            </ul>
-
-        </div>*@
-
+        
     </div>
 
 </div>
