--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Search.cshtml
@@ -50,7 +50,7 @@
                         <div class="col-md-5">
 
                             <div class="form-group">
-                                <input type="text" class="form-control" name="Filter.Customer_Mobile1" placeholder="Enter customer mobile number to search." />
+                                <input type="text" class="form-control" name="Filter.Customer_Mobile1" placeholder="Enter customer mobile number to search." maxlength="12" />
                             </div>
 
                         </div>
@@ -77,7 +77,8 @@
                        
         </div>   
 
-        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPager">
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divCustomerPager">
+
 
         </div>
 
