--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -35,7 +35,7 @@
 
             <div class="block">
 
-                <form role="form" id="frmSearchEmployee">
+                <form role="form" id="frmEmployee">
 
                     <div class="row">
 
@@ -52,8 +52,11 @@
 
                             <div class="btn-group">
                                 @*<button class="btn btn-success active" onclick="location.href='@Url.Action("Index","Employee")'">Create</button>*@
-                                <a class="btn btn-success active" role="button" href="@Url.Action("Index", "Employee")">Create </a>
-                                <button class="btn btn-danger active" style="display:none;" id="btnEdit" >Edit</button>
+                                @*<a class="btn btn-success active" role="button" href="@Url.Action("Index", "Employee")">Create </a>
+                                <button class="btn btn-danger active" style="display:none;" id="btnEdit" >Edit</button>*@
+
+                                <button role="button" class="btn btn-success active" value="Create" id="btnCreateEmployee">Create</button>
+                                <button class="btn btn-danger active" value="Edit" id="btnEditEmployee">Edit</button>
                             </div>
 
                         </div>
