--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -43,35 +43,13 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Enter Gift Voucher No." name="GiftVoucher.Gift_Voucher_No" value="@Model.GiftVoucher.Gift_Voucher_No" />
                             <input type="hidden" class="form-control" id="hdn_GiftVoucherId" name="GiftVoucher.Gift_Voucher_Id" value="@Model.GiftVoucher.Gift_Voucher_Id" />
-                            @*<input type="hidden" name="GiftVoucher.IsActive" value="@Model.GiftVoucher.IsActive">*@
                         </div>
-
 
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Enter person name." name="GiftVoucher.Person_Name" value="@Model.GiftVoucher.Person_Name" />
                         </div>
 
                     </div>
-
-
-
-                    <div class="form-group">
-                        <div class="form-group" style="margin-bottom: 5px; float: right;">
-                            <label class="switch">
-                                @if (Model.GiftVoucher.IsActive == 0)
-                                {
-                                    <input value="@Model.GiftVoucher.IsActive" name="GiftVoucher.IsActive" type="checkbox" id="Flag">
-                                }
-                                else
-                                {
-                                    <input value="@Model.GiftVoucher.IsActive" name="GiftVoucher.IsActive" checked="checked" type="checkbox" id="Flag">
-                                }
-                                @*<input checked="" id="Flag" value="0" type="checkbox">*@
-                                <span></span>
-                            </label>
-                        </div>
-                    </div>
-
 
                 </div>
 
@@ -80,23 +58,35 @@
                     <div class="block">
                         <h4 style="margin-top: 0px;">Date detail.</h4>
 
-                        @*<form role="form">*@
-
-
-
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher date.</span>
-                            <div class="input-group date" id="dp-2" @*data-date="05-07-2014"*@ data-date-format="dd-mm-yyyy">
-                                <input type="text" class="form-control datepicker" @*value="05-07-2014"*@ name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Date.ToString("dd-MM-yyyy")))" readonly />
-                                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                            <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
+                                @if (Model.GiftVoucher.Gift_Voucher_Date != DateTime.MinValue)
+                                {
+                                    <input type="text" class="form-control datepicker" disabled="disabled" name="GiftVoucher.Gift_Voucher_Date" value="@Model.GiftVoucher.Gift_Voucher_Date.ToShortDateString()" />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                }
+                                else
+                                {
+                                    <input type="text" class="form-control datepicker" disabled="disabled" name="GiftVoucher.Gift_Voucher_Date" value="@DateTime.Now.ToShortDateString()" />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                }
                             </div>
                         </div>
 
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher expiry date</span>
-                            <div class="input-group date" id="dp-2" @*data-date="05-07-2014"*@ data-date-format="dd-mm-yyyy">
-                                <input type="text" class="form-control datepicker" @*value="05-07-2014"*@ name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("dd-MM-yyyy")))" readonly />
-                                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                            <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
+                                @if (Model.GiftVoucher.Gift_Voucher_Expiry_Date != DateTime.MinValue)
+                                {
+                                    <input type="text" class="form-control datepicker" disabled="disabled" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToShortDateString()" />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                }
+                                else
+                                {
+                                    <input type="text" class="form-control datepicker" disabled="disabled" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@DateTime.Now.ToShortDateString()" />
+                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                }
                             </div>
                         </div>
 
@@ -109,10 +99,8 @@
                     <div class="block">
                         <h4 style="margin-top: 0px;">Amount detail.</h4>
 
-                        @*<form role="form">*@
-
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter voucher amount." name="GiftVoucher.Gift_Voucher_Amount" value="@Model.GiftVoucher.Gift_Voucher_Amount" />
+                            <input type="text" class="form-control" placeholder="Enter voucher amount." name="GiftVoucher.Gift_Voucher_Amount" value="@(Model.GiftVoucher.Gift_Voucher_Amount == 0 ? "" : Model.GiftVoucher.Gift_Voucher_Amount.ToString())" />
                         </div>
 
 
@@ -141,24 +129,17 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Enter credit card number." id="creditcardno" name="GiftVoucher.Credit_Card_No" value="@Model.GiftVoucher.Credit_Card_No" style="display: none;" />
                         </div>
-                        @*</form>*@
                     </div>
 
                 </div>
-
-           
 
             <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
 
                 <div class="btn-group">
                     <button class="btn btn-success active" type="button" id="btnGiftVoucherSave">Save</button>
-                    @*<button class="btn btn-danger active">Cancel</button>*@
-                    @*<a class="btn btn-danger active" role="button" href="@Url.Action("Search", "GiftVoucher")">Cancel </a>*@
                     <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Search", "GiftVoucher")'">Cancel</button>
                     <button class="btn btn-twitter active" role="button" id="btnGiftVoucherPrint">Print</button>
-
                     
-
                 </div>
 
             </div>
